<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.employeLeave.EmployeeLeaveAddUpdateActivity">


    <Spinner
        android:id="@+id/edt_nik_leave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/black_outline"/>

    <EditText
        android:id="@+id/edt_name_leave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/black_outline"
        android:enabled="false"/>

    <TextView
        android:id="@+id/edt_leave_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/date"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:background="@drawable/black_outline"/>

    <EditText
        android:id="@+id/edt_duration_leave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/leave_duration"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/black_outline"/>

    <EditText
        android:id="@+id/edt_note_leave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/note"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/black_outline"/>

    <Button
        android:id="@+id/btn_submit_employee_leave"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>